--- a/src/layouts/index.sass
+++ b/src/layouts/index.sass
@@ -1,8 +1,71 @@
 // Color scheme
+$darkest: black
 $brand: #03285D
+$brand-accent: #3762b1
+$gradient-dark: #c09a4b
+$gradient-light: #feedbb
+$light-text: white
 
+@keyframes glisten
+  0%
+    background-position: 0% 50%
+  50%
+    background-position: 100% 50%
+  100%
+    background-position: 0% 50%
+
+// Mixins
+@mixin gradient
+  background: #c09a4b
+  // background: -moz-linear-gradient(45deg, #c09a4b 0%, $gradient-light 50%, $gradient-dark 100%)
+  // background: -webkit-linear-gradient(45deg, $gradient-dark 0%,$gradient-light 50%,$gradient-dark 100%)
+  background: linear-gradient(45deg, $gradient-dark 0%,$gradient-light 50%,$gradient-dark 100%)
+  animation: glisten 1s ease infinite
+// Common styles
 *
   padding: 0
   margin: 0
   box-sizing: border-box
   font-family: Roboto, sans-serif
+
+.container
+  max-width: 1000px
+  margin: 0px auto
+
+.button
+  width: 100%
+  max-width: 250px
+  display: inline-block
+  padding: 20px
+  background-color: $brand
+  color: $light-text
+  text-transform: uppercase
+  letter-spacing: 1px
+  font-size: 0.8em
+  text-decoration: none
+
+.block.hero
+  background-color: $brand
+  text-align: center
+  padding: 60px 40px
+  .strapline
+    @include gradient
+    -webkit-background-clip: text
+    -webkit-text-fill-color: transparent
+    font-weight: bold
+    text-transform: uppercase
+    letter-spacing: 2px
+    display: inline-block
+    margin-bottom: 30px
+  h1
+    color: $light-text
+    font-weight: 100
+    font-size: 2.5em
+    margin-bottom: 40px
+  .button
+    margin-bottom: 20px
+    &.gradient
+      @include gradient
+      color: $darkest
+    &.outline
+      border: 1px solid $brand-accent
