--- a/src/layouts/index.sass
+++ b/src/layouts/index.sass
@@ -27,6 +27,12 @@ $font-stack: Roboto, sans-serif
   background: linear-gradient(45deg, $gradient-dark 0%,$gradient-light 50%,$gradient-dark 100%)
   animation: glisten 1s ease infinite
 
+@mixin labelText
+  text-transform: uppercase
+  letter-spacing: 1px
+  font-size: 0.9em
+  font-weight: 600
+
 // Common styles
 *
   padding: 0
@@ -59,7 +65,9 @@ $font-stack: Roboto, sans-serif
   &.outline
     border: 1px solid $brand-accent
     color: $lightest
-
+  svg
+    margin-left: 10px
+    transform: translateY(-0.5px)
 .chapter-title
   text-transform: uppercase
   font-size: 0.8em
@@ -80,28 +88,44 @@ $font-stack: Roboto, sans-serif
     border-bottom: 2px solid $brand
 h1, h2, h3, h4, h5, p
   line-height: 1.6em
+  font-weight: 300
 ul.selling-points
   list-style-type: none
   text-align: center
   li
     margin-bottom: 50px
     h3
-      text-transform: uppercase
-      letter-spacing: 1px
+      @include labelText
       font-size: 1em
       margin-bottom: 10px
     p
-      font-weight: 100
+      font-weight: 300
 
 
 // Header
 .block.header
   background-color: $lightest
   padding: 10px
+  display: flex
+  flex-direction: row
+  justify-content: space-between
+  align-items: center
+  div
+    display: flex
+    flex-direction: row
+    align-items: center
   .button
     padding: 8px
     font-size: 0.75em
     width: auto
+  nav.site-navigation
+    position: absolute
+    top: 0
+    left: 0
+    display: none
+    visibility: hidden
+  svg
+    margin-right: 10px
 
 // Hero block
 .block.hero
@@ -119,7 +143,7 @@ ul.selling-points
     margin-bottom: 30px
   h1
     color: $lightest
-    font-weight: 100
+    font-weight: 300
     font-size: 2.5em
     margin-bottom: 40px
   .button
@@ -128,15 +152,16 @@ ul.selling-points
 // Logos block
 .block.logos
   .container
-    padding: 30px
+    padding: 50px 30px
     display: grid
     grid-template-columns: 1fr 1fr
     grid-column-gap: 30px
+    grid-row-gap: 50px
   img
     filter: grayscale(1)
     text-align: center
     margin: 0 auto
-    margin-bottom: 30px
+    margin-bottom: 0px
     max-width: 100%
 
 // Explanation block
@@ -144,19 +169,24 @@ ul.selling-points
   padding: 50px 0px
   background-color: $light
   h2.headline
-    font-weight: 100
+    font-weight: 300
     color: $brand
     text-align: center
     margin-bottom: 40px
   p
     text-align: center
     margin-bottom: 40px
+  img
+    max-width: 100%
+    margin-bottom: 20px
   section.buttons
     text-align: center
     .button
       margin-bottom: 20px
       &.bare
         color: $brand
+        svg polygon
+          fill: $brand
 
 // Selling points (right-aligned vertical list)
 .block.selling-points
@@ -164,7 +194,7 @@ ul.selling-points
   color: $lightest
   padding: 50px 0px
   h2.headline
-    font-weight: 100
+    font-weight: 300
     color: $lightest
     text-align: center
     margin-bottom: 40px
@@ -177,7 +207,7 @@ ul.selling-points
 .block.selling-points-alt
   padding: 50px 0px
   h2.headline
-    font-weight: 100
+    font-weight: 300
     text-align: center
     margin-bottom: 40px
 
@@ -185,8 +215,17 @@ ul.selling-points
 .block.tabs
   padding: 50px 0px 0px 0px
   background-color: $light
+  div.icon
+    width: 55px
+    height: 55px
+    border-radius: 100%
+    background-color: $brand
+    display: flex
+    justify-content: center
+    align-items: center
+    margin: 0 auto 20px auto
   h2.headline
-    font-weight: 100
+    font-weight: 300
     color: $brand
     text-align: center
     margin-bottom: 20px
@@ -201,12 +240,10 @@ ul.selling-points
     max-width: 500px
     margin: 0 auto
     li
+      @include labelText
       flex: 1
-      text-align: center
-      text-transform: uppercase
-      font-size: 0.9em
-      font-weight: 700
       color: $brand
+      text-align: center
       padding: 12px
       cursor: pointer
       &.selected
@@ -222,4 +259,36 @@ ul.selling-points
       &.selected
         display: block
         visibility: visible
-        pointer
+      ul.tab-content
+        list-style-type: none
+        display: grid
+        grid-template-columns: 1fr 1fr
+        grid-column-gap: 30px
+        grid-row-gap: 40px
+        padding-bottom: 50px
+        margin-bottom: 50px
+        border-bottom: 1px solid transparentize($brand-accent, 0.75)
+        li.tab-content-item
+          span.value
+            font-size: 1.5em
+            font-weight: 300
+            color: $brand
+          span.label
+            display: block
+            @include labelText
+            margin-bottom: 8px
+            color: $brand
+      h3
+        text-align: center
+        color: $brand
+        font-weight: 300
+        font-size: 2em
+        margin-bottom: 20px
+      section.buttons
+        text-align: center
+        .button
+          margin-bottom: 20px
+          &.bare
+            color: $brand
+            svg polygon
+              fill: $brand
