--- a/src/layouts/index.sass
+++ b/src/layouts/index.sass
@@ -2,6 +2,7 @@
 $darkest: #000000
 $brand: #03285D
 $brand-accent: #3762b1
+$brand-vibrant: #00BAFF
 $gradient-dark: #c09a4b
 $gradient-light: #feedbb
 $light: #F2F4FC
@@ -101,31 +102,79 @@ ul.selling-points
     p
       font-weight: 300
 
+.header + .block
+  margin-top: 52px
 
 // Header
 .block.header
   background-color: $lightest
   padding: 10px
   display: flex
+  position: fixed
+  width: 100%
   flex-direction: row
   justify-content: space-between
   align-items: center
+  z-index: 999
+  top: 0
   div
     display: flex
     flex-direction: row
     align-items: center
-  .button
+  .button.small
     padding: 8px
     font-size: 0.75em
     width: auto
-  nav.site-navigation
-    position: absolute
-    top: 0
+  .frost-cover
+    position: fixed
+    top: 52px
     left: 0
-    display: none
+    right: 0
+    bottom: 0
+    background: $brand-accent
+    opacity: 0.75
+    z-index: 99
+    // display: none
     visibility: hidden
-  svg
-    margin-right: 10px
+    opacity: 0
+    transition: 0.2s ease-in
+    &.open
+      // display: block
+      visibility: visible
+      opacity: 0.75
+  nav.site-navigation
+    position: fixed
+    z-index: 999
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    padding: 35px
+    // height: 100vh
+    max-width: 100%
+    width: 300px
+    background-color: $brand
+    top: 52px
+    left: 0
+    bottom: 0px
+    visibility: hidden
+    transform: translateX(-100%)
+    transition: 0.2s ease-in
+    &.open
+      visibility: visible
+      transform: translateX(0px)
+    ul
+      list-style: none
+      li
+        text-transform: uppercase
+        font-weight: 700
+        font-size: 1em
+        padding: 20px 0px
+        a
+          color: $lightest
+          text-decoration: none
+  .menu-toggle
+    margin-right: 15px
+    cursor: pointer
 
 // Hero block
 .block.hero
@@ -292,3 +341,167 @@ ul.selling-points
             color: $brand
             svg polygon
               fill: $brand
+
+// Graphics
+.block.graphics
+  background-color: $brand
+  color: $lightest
+  padding: 50px 0px
+  h2.headline
+    font-weight: 300
+    color: $lightest
+    text-align: center
+    margin-bottom: 20px
+  p
+    text-align: center
+    margin-bottom: 40px
+  .chart
+    width: 100%
+    height: 400px
+    margin-bottom: 30px
+    position: relative
+    h3
+      position: absolute
+      text-align: center
+      display: flex
+      justify-content: center
+      align-items: center
+      font-size: 1.1em
+      text-transform: uppercase
+      top: 0
+      left: 0
+      right: 0
+      bottom: 0
+      padding: 100px
+    .ct-chart
+      height: 100%
+      width: 100%
+    &.blue
+      .ct-series-a .ct-slice-donut-solid
+        fill:  $brand-vibrant
+      .ct-series-b .ct-slice-donut-solid
+        fill:  $brand-vibrant
+        opacity: 0.8
+      .ct-series-c .ct-slice-donut-solid
+        fill:  $brand-vibrant
+        opacity: 0.6
+      .ct-series-d .ct-slice-donut-solid
+        fill:  $brand-vibrant
+        opacity: 0.4
+      .ct-series-e .ct-slice-donut-solid
+        fill:  $brand-vibrant
+        opacity: 0.2
+    &.gradient
+      .ct-series-a .ct-slice-donut-solid
+        fill:  lighten($gradient-dark, 10)
+      .ct-series-b .ct-slice-donut-solid
+        fill:  lighten($gradient-dark, 10)
+        opacity: 0.8
+      .ct-series-c .ct-slice-donut-solid
+        fill:  lighten($gradient-dark, 10)
+        opacity: 0.6
+      .ct-series-d .ct-slice-donut-solid
+        fill:  lighten($gradient-dark, 10)
+        opacity: 0.4
+      .ct-series-e .ct-slice-donut-solid
+        fill:  lighten($gradient-dark, 10)
+        opacity: 0.2
+  .legend
+    margin-bottom: 70px
+    li
+      border-bottom: 1px solid transparentize($brand-accent, 0.75)
+      display: flex
+      flex-direction: row
+      justify-content: space-between
+      align-items: flex-end
+      margin-bottom: 15px
+      &:nth-of-type(2) span.label::before
+        opacity: 0.8
+      &:nth-of-type(3) span.label::before
+        opacity: 0.6
+      &:nth-of-type(4) span.label::before
+        opacity: 0.4
+      &:nth-of-type(5) span.label::before
+        opacity: 0.2
+      span.label
+        @include labelText
+        border-bottom: 1px solid $brand
+        transform: translateY(1px)
+        padding-right: 10px
+        &.blue::before
+          background-color: $brand-vibrant
+        &.gradient::before
+          background-color: lighten($gradient-dark, 10)
+        &::before
+          content: ""
+          display: inline-block
+          width: 15px
+          height: 15px
+          border-radius: 100%
+          margin-right: 15px
+          transform: translateY(3px)
+      span.value
+        border-bottom: 1px solid $brand
+        transform: translateY(1px)
+        padding-left: 10px
+        font-weight: 100
+        font-size: 1.2em
+
+// Team
+.block.team
+  padding: 50px 0px
+  background-color: $light
+  h2.headline
+    font-weight: 300
+    color: $brand
+    text-align: center
+    margin-bottom: 40px
+  .team-members
+    list-style: none
+    .team-member
+      background-color: $lightest
+      padding: 20px
+      // margin: 0px 10px
+      img
+        width: 60px
+        height: 60px
+        border-radius: 100%
+        float: left
+        margin-right: 20px
+        margin-bottom: 15px
+      h3
+        font-weight: 600
+        color: $brand
+        margin-top: 5px
+      h5
+        font-weight: 600
+        color: $brand
+      p
+        clear: both
+        font-size: 0.9em
+        margin-bottom: 20px
+      .team-member-social-links
+        a
+          display: inline-block
+          width: 50px
+          padding: 8px
+          text-decoration: none
+          text-align: center
+          margin-right: 10px
+          background-color: $brand
+          color: $lightest
+  .slick-slider
+    margin-bottom: 40px
+    .slick-slide
+      padding: 0px 10px
+    .slick-dots
+      bottom: -40px
+
+// events
+.block.events
+  padding: 50px 0px
+  h2.headline
+    font-weight: 300
+    color: $brand
+    text-align: center
+    margin-bottom: 40px
