--- a/src/layouts/index.sass
+++ b/src/layouts/index.sass
@@ -2,6 +2,7 @@
 $darkest: #000000
 $brand: #03285D
 $brand-accent: #3762b1
+$brand-accent2: #003585
 $brand-vibrant: #00BAFF
 $gradient-dark: #c09a4b
 $gradient-light: #feedbb
@@ -33,6 +34,27 @@ $font-stack: Roboto, sans-serif
   letter-spacing: 1px
   font-size: 0.9em
   font-weight: 600
+
+@mixin card
+  .inner-text
+    padding: 20px
+  .image
+    width: 100%
+    min-height: 170px
+    background-size: cover
+    background-position: center
+    margin-bottom: 10px
+  h3
+    font-weight: 600
+    color: $brand
+    margin-top: 5px
+  h5
+    font-weight: 600
+    color: $brand
+  p
+    clear: both
+    font-size: 0.9em
+    margin-bottom: 20px
 
 // Common styles
 *
@@ -504,4 +526,219 @@ ul.selling-points
     font-weight: 300
     color: $brand
     text-align: center
+    margin-bottom: 40px
+  h3.headline
+    font-weight: 300
+    font-size: 1.5em
+    color: $brand
+    text-align: center
+    margin-bottom: 20px
+  p
+    text-align: center
+    margin-bottom: 30px
+  a.button
+    display: block
+    margin: 0 auto
+  .upcoming-events
+    margin-bottom: 60px
+    .upcoming-event
+      @include card
+      text-align: center
+      box-shadow: 0px 1px 10px rgba(0,0,0,0.075)
+      h3
+        margin-bottom: 5px
+      h5
+        margin-bottom: 20px
+      a.button.bare
+        color: $brand
+        margin-bottom: 0px
+        svg polygon
+          fill: $brand
+  .slick-slider
+    margin-bottom: 90px
+    .slick-slide
+      padding: 0px 10px
+    .slick-dots
+      bottom: -40px
+
+.later-events
+  margin-bottom: 80px
+  button
+    border: 0
+    background: none
+    @include labelText
+    font-size: 0.8em
+    color: $brand
+  h4
+    @include labelText
+    color: $brand
+    margin-bottom: 30px
+  .later-events-list
+    list-style: none
+    margin-bottom: 30px
+    .later-events-item
+      display: flex
+      flex-direction: row
+      margin-bottom: 20px
+      .image
+        width: 80px
+        height: 80px
+        background-position: center
+        background-size: cover
+        margin-right: 30px
+      h5
+        font-size: 1.2em
+        font-weight: 600
+        color: $brand
+        margin-bottom: 5px
+      p
+        font-size: 0.9em
+        font-weight: 600
+        color: $brand
+
+// Roadmap
+.block.roadmap
+  background-color: $brand
+  color: $lightest
+  padding: 50px 0px
+  .chapter-title
+    color: $lightest
+    margin-bottom: 70px
+    &::before
+      border-color: $lightest
+  .milestones
+    display: grid
+    grid-template-columns: 1fr 1fr
+    text-align: center
+    list-style-type: none
+    grid-row-gap: 80px
+    grid-column-gap: 20px
+    margin-bottom: 40px
+    .milestone
+      position: relative
+      &.checked::before
+        border-color: $gradient-light !important
+      &:first-of-type::before
+        content: ""
+        display: block
+        border-bottom: 1px solid transparentize($brand-accent, 0.75)
+        right: 50%
+        top: 17px
+        position: absolute
+        width: 100%
+        z-index: 1
+      &:nth-of-type(2)::after, &:nth-of-type(6)::after, &:nth-of-type(10)::after
+        position: absolute
+        left: 50%
+        top: 17px
+        content: ""
+        display: block
+        height: 192px
+        width: calc(192px / 2)
+        border-bottom-right-radius: 192px
+        border-top-right-radius: 192px
+        border: 1px solid $brand-accent2
+        border-left: 0
+      &:nth-of-type(3)::after, &:nth-of-type(7)::after
+        position: absolute
+        right: 50%
+        top: 17px
+        content: ""
+        display: block
+        height: 192px
+        width: calc(192px / 2)
+        border-bottom-left-radius: 192px
+        border-top-left-radius: 192px
+        border: 1px solid $brand-accent2
+        border-right: 0
+      &:nth-of-type(11)::after
+        content: ""
+        display: block
+        border-bottom: 1px solid $brand-accent2
+        right: 50%
+        top: 17px
+        position: absolute
+        width: 100%
+        z-index: 1
+      &:nth-of-type(even)::before
+        content: ""
+        display: block
+        border-bottom: 1px solid $brand-accent2
+        right: 50%
+        top: 17px
+        position: absolute
+        width: 104%
+        z-index: 1
+
+      h5
+        text-transform: uppercase
+        font-weight: 600
+        margin-bottom: 5px
+        letter-spacing: 1px
+      p
+        font-size: 0.95em
+      .icon
+        background-color: $brand-accent2
+        width: 33px
+        height: 33px
+        border-radius: 100%
+        display: flex
+        justify-content: center
+        align-items: center
+        margin: 0 auto 30px auto
+        font-size: 0.8em
+        color: $gradient-light
+        z-index: 2
+        position: relative
+        &.checked
+          border: 1px solid $gradient-light
+          background: $brand
+
+// Products
+.block.products
+  padding: 50px 0px
+  h2.headline
+    font-weight: 300
+    color: $brand
+    text-align: center
+    margin-bottom: 40px
+  .products-list
+    .product
+      @include card
+      background-color: $light
+      margin-bottom: 20px
+      .image
+        margin-bottom: 0px
+      h3
+        margin-bottom: 20px
+      .checklist
+        list-style: none
+        margin-bottom: 30px
+        li
+          position: relative
+          padding-left: 40px
+          margin-bottom: 20px
+          font-size: 0.9em
+          &::before
+            position: absolute
+            left: 0
+            border-radius: 100%
+            content: ""
+            display: block
+            width: 22px
+            height: 22px
+            background-color: $brand
+
+// sign-up
+.block.sign-up
+  background-color: $brand
+  color: $lightest
+  padding: 50px 0px
+  text-align: center
+  h2.headline
+    font-weight: 300
+    color: $lightest
+    text-align: center
+    margin-bottom: 40px
+  p
     margin-bottom: 40px
