All blocks now exist

--- a/src/layouts/index.sass
+++ b/src/layouts/index.sass
@@ -554,8 +554,12 @@ ul.selling-points
         margin-bottom: 0px
         svg polygon
           fill: $brand
+
   .slick-slider
     margin-bottom: 90px
+    .slick-list
+      overflow-y: visible
+      overflow-x: hidden
     .slick-slide
       padding: 0px 10px
     .slick-dots
