--- a/src/layouts/index.sass
+++ b/src/layouts/index.sass
@@ -746,3 +746,110 @@ ul.selling-points
     margin-bottom: 40px
   p
     margin-bottom: 40px
+
+.block.faq
+  background-color: $light
+  padding: 50px 0px
+  overflow: hidden
+  max-width: 100%
+  .tabs
+    position: relative
+    left: 50%
+    right: 50%
+    margin-left: -50vw
+    margin-right: -50vw
+    width: 100vw
+    max-width: 100vw
+    overflow: hidden
+    nav.tab-navigation ul
+      list-style-type: none
+      display: grid
+      grid-template-columns: 1fr 1fr 1fr
+      max-width: 600px
+      margin: 0 auto
+      li
+        @include labelText
+        color: $brand
+        text-align: center
+        padding: 12px
+        cursor: pointer
+        &.selected
+          background-color: $lightest
+          pointer-events: none
+          cursor: default
+    section.tabs
+      padding: 20px 0px
+      background-color: $lightest
+      margin-bottom: 80px
+      div.tab
+        display: none
+        visibility: none
+        &.selected
+          display: block
+          visibility: visible
+    .question
+      padding-left: 40px
+      position: relative
+      &[open]
+        svg
+          transform: rotate(90deg)
+      summary
+        font-weight: 600
+        color: $brand
+        padding: 20px 0px
+        // margin-bottom: 20px
+        cursor: pointer
+        &::-webkit-details-marker
+          display: none
+          visibility: hidden
+      svg
+        position: absolute
+        transition: 0.1s ease-in
+        top: 25px
+        left: 7px
+        polygon
+          fill: $brand
+      p
+        margin-bottom: 30px
+  .get-more-help
+    text-align: center
+    h3
+      text-transform: uppercase
+      font-size: 1.1em
+      font-weight: 600
+      letter-spacing: 1px
+      color: $brand
+      margin-bottom: 20px
+    p
+      font-size: 0.9em
+      margin-bottom: 20px
+  .button
+    margin-bottom: 20px
+    &.bare
+      color: $brand
+      svg polygon
+        fill: $brand
+
+.block.footer
+  padding: 40px 40px
+  text-align: center
+  img
+    margin-bottom: 20px
+  h4
+    font-size: 0.9em
+    color: $brand
+    font-weight: 600
+  p
+    color: $brand
+    font-size: 0.9em
+    margin-bottom: 30px
+  .organisation-social-links
+    a
+      display: inline-block
+      width: 50px
+      padding: 8px
+      text-decoration: none
+      text-align: center
+      margin-right: 10px
+      background-color: $brand
+      color: $lightest
