--- a/src/layouts/index.sass
+++ b/src/layouts/index.sass
@@ -1,19 +1,4 @@
-// Color scheme & other
-$darkest: #000000
-$brand: #03285D
-$brand-accent: #3762b1
-$brand-accent2: #003585
-$brand-vibrant: #00BAFF
-$gradient-dark: #c09a4b
-$gradient-light: #feedbb
-$light: #F2F4FC
-$lightest: #ffffff
-
-$max-width: 1100px
-$font-stack: Roboto, sans-serif
-
-// Keep track of how tall the header is, to accurately align other page elements
-$header-height: 52px
+@import '../pages/variables'
 
 // Animations
 @keyframes glisten
@@ -31,12 +16,6 @@ $header-height: 52px
   background: -webkit-linear-gradient(45deg, $gradient-dark 0%,$gradient-light 50%,$gradient-dark 100%)
   background: linear-gradient(45deg, $gradient-dark 0%,$gradient-light 50%,$gradient-dark 100%)
   animation: glisten 1s ease infinite
-
-@mixin labelText
-  text-transform: uppercase
-  letter-spacing: 1px
-  font-size: 0.9em
-  font-weight: 600
 
 @mixin card
   .inner-text
@@ -68,11 +47,11 @@ $header-height: 52px
 .container
   max-width: $max-width
   margin: 0px auto
-  padding: 10px 30px
+  padding: $container-padding
 .button
   width: 100%
   max-width: 250px
-  display: inline-block
+  display: block
   padding: 20px
   text-transform: uppercase
   letter-spacing: 1px
@@ -89,10 +68,16 @@ $header-height: 52px
   &.bare
     background-color: none
     color: $lightest
+    max-width: inherit
+    width: auto
+    display: inline-block
+    padding: 10px 0px
+    text-align: left
   &.gradient
     @include gradient
     color: $darkest
   &.outline
+    background: none
     border: 1px solid $brand-accent
     color: $lightest
   svg
@@ -131,6 +116,10 @@ ul.selling-points
     p
       font-weight: 300
 
+
+.button + .button.bare
+  // margin-right: 25px
+
 .header + .block
   margin-top: $header-height
 
@@ -145,6 +134,7 @@ ul.selling-points
   justify-content: space-between
   align-items: center
   z-index: 999
+  transition: 0.1s ease-in
   top: 0
   .inner
     display: flex
@@ -154,68 +144,6 @@ ul.selling-points
     padding: 8px
     font-size: 0.75em
     width: auto
-  .frost-cover
-    position: fixed
-    top: $header-height
-    left: 0
-    right: 0
-    bottom: 0
-    background: $brand-accent
-    opacity: 0.75
-    z-index: 99
-    // display: none
-    visibility: hidden
-    opacity: 0
-    transition: 0.2s ease-in
-    &.open
-      // display: block
-      visibility: visible
-      opacity: 0.75
-  nav.site-navigation
-    position: fixed
-    z-index: 999
-    display: flex
-    flex-direction: column
-    justify-content: space-between
-    padding: 35px
-    // height: 100vh
-    max-width: 100%
-    width: 300px
-    background-color: $brand
-    top: $header-height
-    left: 0
-    bottom: 0px
-    visibility: hidden
-    transform: translateX(-100%)
-    transition: 0.2s ease-in
-    &.open
-      visibility: visible
-      transform: translateX(0px)
-    ul
-      list-style: none
-      li
-        text-transform: uppercase
-        font-weight: 700
-        font-size: 1em
-        padding: 20px 0px
-        a
-          color: $lightest
-          text-decoration: none
-    .organisation-social-links
-      display: flex
-      flex-direction: row
-      justify-content: center
-      width: 100%
-      margin-top: 20px
-      a
-        display: inline-block
-        width: 50px
-        padding: 8px
-        text-decoration: none
-        text-align: center
-        margin-right: 10px
-        background-color: $brand
-        color: $lightest
   .menu-toggle
     margin-right: 15px
     cursor: pointer
@@ -237,11 +165,12 @@ ul.selling-points
     margin-bottom: 30px
   h1
     color: $lightest
-    font-weight: 300
+    font-weight: 100
     font-size: 2.5em
     margin-bottom: 40px
   .button
-    margin-bottom: 20px
+    display: block
+    margin: 0 auto 20px auto
 
 // Logos block
 .block.logos
@@ -282,7 +211,7 @@ ul.selling-points
   section.buttons
     text-align: center
     .button
-      margin-bottom: 20px
+      margin: 0px auto 20px auto
       &.bare
         color: $brand
         svg polygon
@@ -302,12 +231,24 @@ ul.selling-points
     color: $lightest
     &::before
       border-color: $lightest
+  .selling-points
+    h3
+      @include gradient
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+      letter-spacing: 1px
+      display: inline-block
+    img
+      max-width: 140px
+      height: auto
+      margin-bottom: 0px
 
 // Selling points alt (horizontal row)
 .block.selling-points-alt
   padding: 50px 0px
   h2.headline
     font-weight: 300
+    color: $brand
     text-align: center
     margin-bottom: 40px
   .selling-points
@@ -322,7 +263,7 @@ ul.selling-points
 .block.tabs
   padding: 50px 0px 0px 0px
   background-color: $light
-  div.icon
+  .icon
     width: 55px
     height: 55px
     border-radius: 100%
@@ -338,7 +279,8 @@ ul.selling-points
     margin-bottom: 20px
   p
     text-align: center
-    margin-bottom: 40px
+    margin: 0 auto 40px auto
+    max-width: 500px
   nav.tab-navigation ul
     list-style-type: none
     display: flex
@@ -394,7 +336,7 @@ ul.selling-points
       section.buttons
         text-align: center
         .button
-          margin-bottom: 20px
+          margin: 0px auto 20px auto
           &.bare
             color: $brand
             svg polygon
@@ -412,7 +354,8 @@ ul.selling-points
     margin-bottom: 20px
   p
     text-align: center
-    margin-bottom: 40px
+    margin: 0 auto 40px auto
+    max-width: 500px
   .chart
     width: 100%
     height: 400px
@@ -571,7 +514,8 @@ ul.selling-points
     margin-bottom: 20px
   p
     text-align: center
-    margin-bottom: 30px
+    margin: 0 auto 30px auto
+    max-width: 500px
   a.button
     display: block
     margin: 0 auto
@@ -581,6 +525,9 @@ ul.selling-points
       @include card
       text-align: center
       box-shadow: 0px 1px 10px rgba(0,0,0,0.075)
+      .image
+        height: 0
+        padding-bottom: 60%
       h3
         margin-bottom: 5px
       h5
@@ -669,7 +616,7 @@ ul.selling-points
         right: 50%
         top: 17px
         position: absolute
-        width: 100%
+        width: 200%
         z-index: 1
 
       // Curved paths on right
@@ -730,7 +677,7 @@ ul.selling-points
         right: 50%
         top: 17px
         position: absolute
-        width: 100%
+        width: 200%
         z-index: 1
 
       h5
@@ -765,12 +712,18 @@ ul.selling-points
     color: $brand
     text-align: center
     margin-bottom: 40px
+  p
+    text-align: center
+    margin: 0 auto 50px auto
+    max-width: 500px
   .products-list
     .product
       @include card
       background-color: $light
       margin-bottom: 20px
       .image
+        height: 0
+        padding-bottom: 60%
         margin-bottom: 0px
       h3
         margin-bottom: 20px
@@ -806,7 +759,17 @@ ul.selling-points
     text-align: center
     margin-bottom: 40px
   p
-    margin-bottom: 40px
+    max-width: 500px
+    margin: 0 auto 40px auto
+  form input
+    font-family: $font-stack
+    font-size: 1em
+    padding: 18px
+    border: 0
+    margin-bottom: 15px
+    transform: translateY(1.5px)
+  .button
+      margin: 0px auto 20px auto
 
 .block.faq
   background-color: $light
@@ -885,7 +848,7 @@ ul.selling-points
       font-size: 0.9em
       margin-bottom: 20px
   .button
-    margin-bottom: 20px
+    margin: 0px auto 20px auto
     &.bare
       color: $brand
       svg polygon
@@ -904,6 +867,9 @@ ul.selling-points
     color: $brand
     font-size: 0.9em
     margin-bottom: 30px
+  .footer-menu
+    display: none
+    visibility: hidden
   .organisation-social-links
     a
       display: inline-block
