--- a/src/layouts/queries.sass
+++ b/src/layouts/queries.sass
@@ -164,13 +164,14 @@
             grid-template-rows: 1fr auto auto 1fr
             grid-column-gap: 20px
             text-align: left
-            margin-bottom: 0px
+            margin-bottom: 30px
             div
               grid-column: 1 / 2
               grid-row: 1 / 5
               width: 140px
               height: 140px
             h3
+              // margin-top: 20px
               grid-column: 2 / 3
               grid-row: 2 / 3
             p
@@ -295,7 +296,7 @@
       width: 100%
       position: relative
       margin: 0px auto 60px auto
-      padding: $container-padding
+      padding: 10px 20px
       .slick-list
         overflow: visible
       .upcoming-event
