--- a/src/layouts/queries.sass
+++ b/src/layouts/queries.sass
@@ -407,13 +407,19 @@
       position: absolute
       top: 0
       right: 0
+    .footer-lower
+      display: flex
+      flex-direction: row
+      justify-content: space-between
+      align-items: flex-end
+
     .footer-menu
       list-style: none
       display: block
       visibility: visible
       margin-left: 0px
       text-align: left
-      margin-top: 60px
+      // margin-top: 60px
       li
         display: inline-block
         text-align: left
