--- a/src/pages/custom.sass
+++ b/src/pages/custom.sass
@@ -17,6 +17,27 @@
     position: relative
     z-index: 2
 
+.block.sign-up
+  background-image: url('/empty-ring.svg')
+  background-size: cover
+  background-position: center
+
+.block.footer
+  form
+    width: 100%
+    display: flex
+    flex-direction: row
+    input
+      flex: 1
+      margin-bottom: 0px
+      transform: translateY(0px)
+      padding: 10px
+    button
+      flex: 1
+      padding: 10px
+      margin-left: 10px
+
+
 @media screen and (max-width: 800px)
   .block.hero
     .animated-ring
@@ -40,7 +61,11 @@
       transform: translate(60%, -55%)
       animation: spinBig 60s infinite linear
 
-.block.sign-up
-  background-image: url('/empty-ring.svg')
-  background-size: cover
-  background-position: center
+  .block.footer
+      form
+        width: 100%
+        max-width: 450px
+        input
+          padding: 18px
+        button
+          padding: 20px
