--- a/src/layouts/index.sass
+++ b/src/layouts/index.sass
@@ -236,7 +236,7 @@ form input
   padding: 50px 0px
   h2.headline
     font-weight: 300
-    color: $lightest
+    color: $gradient-light
     text-align: center
     margin-bottom: 40px
   .chapter-title
@@ -361,7 +361,7 @@ form input
   padding: 50px 0px
   h2.headline
     font-weight: 300
-    color: $lightest
+    color: $gradient-light
     text-align: center
     margin-bottom: 20px
   p
@@ -767,7 +767,7 @@ form input
   text-align: center
   h2.headline
     font-weight: 300
-    color: $lightest
+    color: $gradient-light
     text-align: center
     margin-bottom: 40px
   p
