--- a/src/layouts/queries.sass
+++ b/src/layouts/queries.sass
@@ -1,5 +1,11 @@
 @import '../pages/variables'
 
+@mixin labelText
+  text-transform: uppercase
+  letter-spacing: 1px
+  font-size: 0.9em
+  font-weight: 600
+
 // Only style the responsive menu panel on smaller screens
 @media (max-width: $breakpoint1)
   .block.header
