--- a/src/pages/variables.sass
+++ b/src/pages/variables.sass
@@ -1,3 +1,8 @@
+// ======================================
+// VARIABLES.SASS
+// Customise site fonts, colours and more
+// ======================================
+
 // Color scheme
 $darkest: #000000
 $brand: #03285D
@@ -20,10 +25,3 @@ $breakpoint2: 1350px
 
 // Keep track of how tall the header is, to accurately align other page elements
 $header-height: 52px
-
-
-@mixin labelText
-  text-transform: uppercase
-  letter-spacing: 1px
-  font-size: 0.9em
-  font-weight: 600
