--- a/src/pages/custom.sass
+++ b/src/pages/custom.sass
@@ -1,3 +1,8 @@
+// ======================
+// CUSTOM.SASS
+// Add your own SASS here
+// ======================
+
 @keyframes spin
   from
     transform: translate(-50%, 55%) rotate(0deg)
