Fixed mobile menu display

--- a/src/layouts/index.sass
+++ b/src/layouts/index.sass
@@ -152,7 +152,7 @@ form input
   // margin-right: 25px
 
 .header + .block
-  margin-top: $header-height
+  margin-top: calc($header-height - 3px )
 
 // Header
 .block.header
