--- a/src/layouts/queries.sass
+++ b/src/layouts/queries.sass
@@ -18,6 +18,7 @@
       background: $brand-accent
       opacity: 0.75
       z-index: 99
+      height: 100vh
       // display: none
       visibility: hidden
       opacity: 0
@@ -33,7 +34,7 @@
       flex-direction: column
       justify-content: space-between
       padding: 35px
-      // height: 100vh
+      height: 100vh
       max-width: 100%
       width: 300px
       background-color: $brand
