--- a/src/layouts/queries.sass
+++ b/src/layouts/queries.sass
@@ -28,25 +28,20 @@
         visibility: visible
         opacity: 0.75
     nav.site-navigation
+      background-color: $brand
       position: fixed
+      top: $header-height
+      left: 0px
+      padding: 35px
       z-index: 999
+      height: calc(100vh - 52px)
       display: flex
       flex-direction: column
       justify-content: space-between
-      padding: 35px
-      height: 100vh
-      max-width: 100%
-      width: 300px
-      background-color: $brand
-      top: $header-height
-      left: 0
-      bottom: 0px
-      visibility: hidden
       transform: translateX(-100%)
-      transition: 0.2s ease-in
+      transition: 0.1s ease-in
       &.open
-        visibility: visible
-        transform: translateX(0px)
+        transform: translateX(0%)
       ul
         list-style: none
         li
