--- a/src/layouts/queries.sass
+++ b/src/layouts/queries.sass
@@ -10,7 +10,7 @@
 @media (max-width: $breakpoint1)
   .frost-cover
     position: fixed
-    top: $header-height
+    top: 0
     left: 0
     right: 0
     bottom: 0
