--- a/src/layouts/index.sass
+++ b/src/layouts/index.sass
@@ -262,6 +262,9 @@ form input
     color: $gradient-light
     text-align: center
     margin-bottom: 40px
+  p
+    text-align: center
+    margin-bottom: 40px
   .chapter-title
     color: $lightest
     &::before
@@ -842,6 +845,7 @@ form input
         &.selected
           display: block
           visibility: visible
+          animation: fadeIn 0.4s ease-in
     .question
       padding-left: 40px
       position: relative
