Events section now supports two body tags

--- a/src/layouts/queries.sass
+++ b/src/layouts/queries.sass
@@ -306,9 +306,14 @@
       margin-bottom: 60px
     h2.headline
       font-size: 2em
-      margin-bottom: 60px
+      margin-bottom: 40px
       max-width: 50%
       text-align: left
+    p
+      max-width: 50%
+      text-align: left
+      margin-left: 0px
+      margin-bottom: 40px  
     .slick-slider
       max-width: $max-width
       width: 100%
