--- a/src/layouts/index.sass
+++ b/src/layouts/index.sass
@@ -766,7 +766,7 @@ form input
         padding-bottom: 60%
         margin-bottom: 0px
       h3
-        margin-bottom: 20px
+        margin-bottom: 17px
       .checklist
         list-style: none
         margin-bottom: 30px
@@ -774,12 +774,16 @@ form input
           position: relative
           padding-left: 40px
           margin-bottom: 20px
-          font-size: 0.9em
+          font-size: 1em
+          text-align: left
+          p
+            text-align: left
           svg.icon
             position: absolute
             stroke: $gradient-light
             padding: 5px
             left: 0
+            top: 3px
             border-radius: 100%
             content: ""
             display: block
