--- a/src/layouts/queries.sass
+++ b/src/layouts/queries.sass
@@ -183,7 +183,7 @@
             grid-column-gap: 20px
             text-align: left
             margin-bottom: 30px
-            div
+            .image-holder
               grid-column: 1 / 2
               grid-row: 1 / 5
               width: 140px
@@ -192,7 +192,7 @@
               // margin-top: 20px
               grid-column: 2 / 3
               grid-row: 2 / 3
-            p
+            .body
               grid-column: 2 / 3
               grid-row: 3 / 4
 
@@ -309,11 +309,11 @@
       margin-bottom: 40px
       max-width: 50%
       text-align: left
-    p
+    .lede p
       max-width: 50%
       text-align: left
       margin-left: 0px
-      margin-bottom: 40px  
+      margin-bottom: 40px
     .slick-slider
       max-width: $max-width
       width: 100%
