--- a/src/layouts/index.sass
+++ b/src/layouts/index.sass
@@ -567,8 +567,11 @@ form input
       text-align: center
       box-shadow: 0px 1px 10px rgba(0,0,0,0.075)
       .image
+        background-color: red
         height: 0
         padding-bottom: 60%
+        background-position: center
+        background-size: cover
       h3
         margin-bottom: 5px
       h5
