--- a/src/pages/variables.sass
+++ b/src/pages/variables.sass
@@ -10,7 +10,7 @@ $brand-accent: #3762b1
 $brand-accent2: #003585
 $brand-vibrant: #00BAFF
 $gradient-dark: #c09a4b
-$gradient-light: #feedbb
+$gradient-light: #FFD770
 $light: #F2F4FC
 $lightest: #ffffff
 
